[package]
name = "async-clipboard"
version = "0.1.0"
edition = "2021"
description = "A asynchronous clipboard manager."
repository = "https://github.com/JasonkayZK/async-clipboard"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.23.0", features = []}
async-trait = { version = "0.1.60" }
